<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">JetPackTea</string>
    <string name="textview1">Team A</string>
    <string name="textview2">Team B</string>
    <string name="num_view_model_demo" translatable="false">0</string>
    <string name="btn1_view_model_demo" translatable="false">+1</string>
    <string name="btn2_view_model_demo" translatable="false">+2</string>
    <string name="btn3_view_model_demo" translatable="false">-1</string>
    <string name="scoreA" translatable="false">0</string>
    <string name="scoreB" translatable="false">0</string>
    <string name="button1" translatable="false">+1</string>
    <string name="button2" translatable="false">+2</string>
    <string name="button3" translatable="false">+3</string>
    <string name="undoButton">undo</string>
    <string name="resetButton">reset</string>
    <string name="high_score_tv">最高得分记录：%d</string>
    <string name="current_score_tv">当前得分：%d</string>
    <string name="win_score_tv">最终得分：%d</string>
    <string name="go_to_btn">跳转</string>
    <string name="welcome_to_use">口算测试</string>
    <string name="enter_count">开始</string>
    <string name="continue_answer">回答正确！请继续答题！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
